2-tier-app-https/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: two-tier-app
  labels:
    app: 2-tier-app
spec:
  type: ClusterIP
  selector:
    app: 2-tier-app
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
