2-tier-app-https/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2-tier-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - 2-tier-app.localdomain
    secretName: 2-tier-app-tls
  rules:
  - host: 2-tier-app.localdomain
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: two-tier-app
            port:
              number: 80
